--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -6,34 +6,34 @@
           <div class="card mx-4">
             <div class="card-body p-4">
               <form>
-                <h1>Register</h1>
-                <p class="text-muted">Create your account</p>
+                <h1>{{'register.register'|translate}}</h1>
+                <p class="text-muted">{{'register.create_your_account'|translate}}</p>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Username" autocomplete="username" required>
+                  <input type="text" class="form-control" placeholder="{{'register.username'|translate}}" autocomplete="username" required>
                 </div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text">@</span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Email" autocomplete="email" required>
+                  <input type="text" class="form-control" placeholder="{{'register.email'|translate}}" autocomplete="email" required>
                 </div>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Password" autocomplete="new-password" required>
+                  <input type="password" class="form-control" placeholder="{{'register.password'|translate}}" autocomplete="new-password" required>
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Repeat password" autocomplete="new-password" required>
+                  <input type="password" class="form-control" placeholder="{{'register.repeat_password'|translate}}" autocomplete="new-password" required>
                 </div>
-                <button type="button" class="btn btn-block btn-success">Create Account</button>
-                <button type="button" class="btn btn-block btn-danger" (click)="gotoLogin()">Goto login</button>
+                <button type="button" class="btn btn-block btn-success">{{'register.create_account'| translate}}</button>
+                <button type="button" class="btn btn-block btn-danger" (click)="gotoLogin()">{{'register.goto_login'|translate}}</button>
               </form>
             </div>
             <div class="card-footer p-4">
